# nexisos

./: .gitignore  Cargo.toml  Makefile  README.md  deny.toml  meson.build  meson_options.txt  shell-buildroot.nix  shell-pkgs.nix
.github/workflows/: main.yml
crates/nexis-cli/: Cargo.toml
crates/nexis-common/: Cargo.toml
crates/nexis-config/: Cargo.toml
crates/nexis-ctl/: Cargo.toml
crates/nexis-guard/: Cargo.toml
crates/nexis-init/: Cargo.toml
crates/nexis-installer/: Cargo.toml
crates/nexis-installer/src/: app.rs  main.rs  theme.rs
crates/nexis-installer/src/steps/: complete.rs  disk.rs  encryption.rs  filesystem.rs  hostname.rs  install.rs  keyboard.rs  locale.rs  mod.rs  network.rs  partition.rs  profile.rs  rootpass.rs  summary.rs  timezone.rs  user.rs  welcome.rs
crates/nexis-installer/src/system/: bootloader.rs  crypt.rs  disk.rs  fs.rs  install.rs  mod.rs  network.rs
crates/nexis-installer/src/ui/: mod.rs  widgets.rs
crates/nexis-installer/src/util/: cmd.rs
crates/nexis-pm/: Cargo.toml
crates/nexis-store/: Cargo.toml
dev/: .envrc.example  Dockerfile.dev  devcontainer.json
