[package]
name = "nexis-installer"
version.workspace = true
edition.workspace = true
description = "NexisOS TUI installer"

[[bin]]
name = "nexis-installer"
path = "src/main.rs"

[features]
dry-run = []

[dependencies]
nexis-common = { path = "../nexis-common" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
unicode-width = "0.2"
